<package>
	<name>thrust_controller</name>
	<version>1.0.0</version>
	<description>
    		This package is thrust_controller.
	</description>
	<author email="jespestana@gmail.com">Jesus Pestana Puerta</author>
	<maintainer email="rodelgo7al@gmail.com"> Alberto Rodelgo </maintainer>
	<license>BSD-3</license>

  	<buildtool_depend>catkin</buildtool_depend>
	  
  	<build_depend>lib_pugixml</build_depend>
	<build_depend>lib_cvgutils</build_depend>

	<run_depend>lib_pugixml</run_depend>
	<run_depend>lib_cvgutils</run_depend>

  
</package>


