<package>
	<name>thrust_controller_process</name>
	<version>2.0.0</version>
	<description>
    		This package is thrust_controller_process.
	</description>
	<author email="rodelgo7al@gmail.com">Alberto Rodelgo</author>
	<maintainer email="rodelgo7al@gmail.com">Alberto Rodelgo</maintainer>
  	<license>BSD-3</license>

  	<buildtool_depend>catkin</buildtool_depend>

  	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>robot_process</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>thrust_controller</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
	<build_depend>aerostack_msgs</build_depend>
	<build_depend>tf_conversions</build_depend>
	<build_depend>eigen</build_depend>
	<build_depend>mav_msgs</build_depend>
	<build_depend>lib_cvgutils</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>robot_process</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>thrust_controller</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
	<run_depend>aerostack_msgs</run_depend>
	<run_depend>tf_conversions</run_depend>
	<run_depend>eigen</run_depend>
	<run_depend>mav_msgs</run_depend>
	<run_depend>lib_cvgutils</run_depend>
  
</package>


